--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="gray">#f0ebd8</color>
     <color name="dark_color">#1A1A1A</color>
     <color name="title_color">#414141</color>
+    <color name="text_color">#6E6E6E</color>
     <color name="blue_color">#188BFF</color>
     <color name="dark_blue_color">#186EC5</color>
 
